5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1808_2578.log
== TEST (2019-06-12 19:21:20) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a força do aluno")))

for i in range(size(v)):
	if(v[i]% 2=! 0):
		c+=1
	cont= zeros(size(v), dtype=int)
print(cont)
-- ERROR:
File "XXXX", line 6
    if(v[i]% 2=! 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:20) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a força do aluno")))

for i in range(size(v)):
	if(v[i]% 2=! 0):
		c+=1
	cont= zeros(size(v), dtype=int)
print(cont)
-- ERROR:
File "XXXX", line 6
    if(v[i]% 2=! 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:30) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a força do aluno")))

for i in range(size(v)):
	if(v[i]% 2 != 0):
		c+=1
	cont= zeros(size(v), dtype=int)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:37) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a forca do aluno")))

for i in range(size(v)):
	if(v[i]% 2 != 0):
		c+=1
	cont= zeros(size(v), dtype=int)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:56) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a forca do aluno")))
c=0
for i in range(size(v)):
	if(v[i]% 2 != 0):
		c+=1
	cont= zeros(size(v), dtype=int)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:22:25) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a forca do aluno")))
c=0
for i in range(size(v)):
	if(v[i]%2 == 0):
		c+=1
	cont= zeros(size(v), dtype=int)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:22:40) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a forca do aluno")))
c=0
for i in range(size(v)):
	if(v[i]%2 == 0):
		c+=1
	cont= zeros(size(c), dtype=int)
print(cont)
-- EXECUTION TIME:
1.06762
-- TEST CASE 1:
---- input:
[120,130,140,150,160,170,180,190,201]
---- correct output:
[120 130 140 150 160 170 180 190]
---- user output:
[0]
-- TEST CASE 2:
---- input:
[131,180]
---- correct output:
[180]
---- user output:
[0]
-- TEST CASE 3:
---- input:
[333,567,899,214]
---- correct output:
[214]
---- user output:
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:22:42) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a forca do aluno")))
c=0
for i in range(size(v)):
	if(v[i]%2 == 0):
		c+=1
	cont= zeros(size(c), dtype=int)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:22:54) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a forca do aluno")))
c=0
for i in range(size(v)):
	if(v[i]%2 != 0):
		c+=1
	cont= zeros(size(c), dtype=int)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:22:54) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a forca do aluno")))
c=0
for i in range(size(v)):
	if(v[i]%2 != 0):
		c+=1
	cont= zeros(size(c), dtype=int)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:22:56) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a forca do aluno")))
c=0
for i in range(size(v)):
	if(v[i]%2 != 0):
		c+=1
	cont= zeros(size(c), dtype=int)
print(cont)
-- EXECUTION TIME:
0.907243
-- TEST CASE 1:
---- input:
[120,130,140,150,160,170,180,190,201]
---- correct output:
[120 130 140 150 160 170 180 190]
---- user output:
[0]
-- TEST CASE 2:
---- input:
[131,180]
---- correct output:
[180]
---- user output:
Insira a forca do aluno[0]
-- TEST CASE 3:
---- input:
[333,567,899,214]
---- correct output:
[214]
---- user output:
Insira a forca do aluno[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:13) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a forca do aluno")))
c=0
for i in range(size(v)):
	if(v[i]%2 != 0):
		c+=1
		cont= zeros(size(c), dtype=int)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:45) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a forca do aluno")))
c=0
for i in range(size(v)):
	if(v[i]%2 == 0):
		c+=1
		cont= zeros(size(c), dtype=int)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:24:04) 
-- CODE:
from numpy import*

v= array(eval(input("Insira a forca do aluno")))
c=0
for i in range(size(v)):
	if(v[i]%2 == 0):
		c+=1
		cont= zeros(c, dtype=int)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:26:11) 
-- CODE:
from numpy import*
v= array(eval(input("Insira a forca do aluno")))
c=0
a=0
for i in range(size(v)):
	if(v[i]%2 == 0):
		c+=1
		cont= zeros(c, dtype=int)
for i in range(size(v)):
	if(v[i]%2 ==0):
		cont[a]=v[i]
		a+=1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:26:58) 
-- CODE:
from numpy import*
v= array(eval(input("Insira a forca do aluno")))
c=0
a=0
for i in range(size(v)):
	if(v[i]%2 == 0):
		c+=1
		cont= zeros(c, dtype=int)
for i in range(size(v)):
	if(v[i]%2 ==0):
		cont[a]=v[i]
		a+=1
print(cont)
-- EXECUTION TIME:
1.08512
-- TEST CASE 1:
---- input:
[120,130,140,150,160,170,180,190,201]
---- correct output:
[120 130 140 150 160 170 180 190]
---- user output:
[120 130 140 150 160 170 180 190]
-- TEST CASE 2:
---- input:
[131,180]
---- correct output:
[180]
---- user output:
[180]
-- TEST CASE 3:
---- input:
[333,567,899,214]
---- correct output:
[214]
---- user output:
Insira a forca do aluno[214]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:27:03) 
-- CODE:
from numpy import*
v= array(eval(input("Insira a forca do aluno")))
c=0
a=0
for i in range(size(v)):
	if(v[i]%2 == 0):
		c+=1
		cont= zeros(c, dtype=int)
for i in range(size(v)):
	if(v[i]%2 ==0):
		cont[a]=v[i]
		a+=1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:27:14) 
-- CODE:
from numpy import*
v= array(eval(input("Insira a forca do aluno")))
c=0
a=0
for i in range(size(v)):
	if(v[i]%2 == 0):
		c+=1
		cont= zeros(c, dtype=int)
for i in range(size(v)):
	if(v[i]%2 ==0):
		cont[a]=v[i]
		a+=1
print(cont)
-- EXECUTION TIME:
0.965484
-- TEST CASE 1:
---- input:
[120,130,140,150,160,170,180,190,201]
---- correct output:
[120 130 140 150 160 170 180 190]
---- user output:
[120 130 140 150 160 170 180 190]
-- TEST CASE 2:
---- input:
[131,180]
---- correct output:
[180]
---- user output:
[180]
-- TEST CASE 3:
---- input:
[333,567,899,214]
---- correct output:
[214]
---- user output:
[214]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
